# ChangeLog for app-misc/cl-tools-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-tools-meta-11.0-r3 (30 Nov 2010)

  30 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.0-r2.ebuild, +cl-tools-meta-11.0-r3.ebuild:
  Added DHCP for CLS

*cl-tools-meta-11.0-r2 (25 Nov 2010)

  25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.0-r1.ebuild, +cl-tools-meta-11.0-r2.ebuild:
  Renamed USE flag to CDISTRO.

*cl-tools-meta-11.0 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-tools-meta-11.0.ebuild:
  New meta-package for Calculate Linux.
