@@ -1,6 +1,0 @@
-To git@git.calculate.ru:/dev/overlay
- ! [rejected]        master -> master (non-fast-forward)
-error: failed to push some refs to 'git@git.calculate.ru:/dev/overlay'
-To prevent you from losing history, non-fast-forward updates were rejected
-Merge the remote changes (e.g. 'git pull') before pushing again.  See the
-'Note about fast-forwards' section of 'git push --help' for details.
