@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/cl-tools-meta
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Jan 2011; Трацевский Александр <alex@gentoo.org>
+  cl-tools-meta-11.0-r3.ebuild:
+  Added app-misc/screen for CMC
 
 *cl-tools-meta-11.0-r3 (30 Nov 2010)
 
